libs/pavex_cli/tests/ui_tests/references_to_a_constructible_type_are_not_allowed/expectations/stderr.txt
Error: 
  × One of the input parameters for `app::stream_file` has a type that I
  │ cannot handle.
    ╭─[src/lib.rs:17:1]
 17 │         .constructor(f!(crate::Logger::new), Lifecycle::Singleton)
 18 │         .route(f!(crate::stream_file), "/home")
    ·                ───────────┬──────────
    ·                           ╰── The handler was registered here
 19 │ }
    ╰────

Error: 
  × 
    ╭─[src/lib.rs:10:1]
 10 │ 
 11 │ pub fn stream_file(input: &Logger) -> http::Response<hyper::body::Body> {
    ·                           ───┬───
    ·                              ╰── I do not know how handle this parameter
 12 │     todo!()
    ╰────